MBug: Fixed canned-query left-alignment.

--- a/apps/mbug/style.css
+++ b/apps/mbug/style.css
@@ -535,6 +535,7 @@ select[name=pri], select[name=status] {
 }
 
 .swipeAltHeader {
+  padding-left: 57px !important;
   height: 36px;
 }
 
